# Ozzmosis

./: .gitignore  AGENTS.md  Instruções Projeto Aurora.txt  PLAN.md  PR_DESCRIPTION.md  PR_DESCRIPTION_NEXUS_PREINT.md  PR_DESCRIPTION_OS-005.md  README.md  SMOKE_TEST_RESULT.md  eslint.config.mjs  package-lock.json  package.json
apps/alvaro-core/: README.md  main.py  pyproject.toml  pytest.ini
apps/alvaro-core/api/routes/: trustware.py
apps/alvaro-core/ingest/: ingest_artifacts.ps1  ingest_artifacts.sh
apps/alvaro-core/knowledge/: index.json
apps/alvaro-core/policies/: ALVARO_MODE_OBSERVER.md
apps/alvaro-core/services/shield/: enforcer.py
apps/alvaro-core/services/trustware/: engine.py
apps/alvaro-core/services/trustware/templates/: wealth_rules_v1.yaml
apps/alvaro-core/src/alvaro/: __init__.py  app.py
apps/alvaro-core/src/alvaro/genesis/: __init__.py  api.py  artifacts.py  contracts.py  engine.py  pdf_stub.py  policy.py
apps/alvaro-core/src/alvaro/genesis/policies/: genesis.v0.yaml
apps/alvaro-core/tests/genesis/: test_genesis_decide_determinism.py  test_genesis_policy_enforcement.py
apps/alvaro-core/tests/survival/: test_survival_trustware.py
libs/elysian-brain/: README.md  package.json  pyproject.toml
libs/elysian-brain/src/elysian_brain/toolbelt/: __init__.py  cli.py
libs/elysian-brain/src/kernel/: index.ts  kernel.ts  types.ts
libs/elysian-brain/src/toolbelt-ts/: client.ts  types.ts
libs/elysian-brain/tests/: test_smoke_transcribe_cli.py
libs/elysian-brain/tests/survival/: brain.survival.test.ts  toolbelt.survival.test.ts
(+708 files in other folders)
